--- a/index.css
+++ b/index.css
@@ -24,11 +24,28 @@ h1 {
     padding: 5px;
     background-color: red;
 }
-
 #header_foreach {
+    background-color: pink;
+    padding: 10px;
+    max-width: 1480px;
     display: flex;
     justify-content: space-around;
     align-items: center;
-    background-color: pink;
 }
 
+#header_abonner {
+    margin-left: 700px;
+    padding: 5px;
+    background-color: rgb(255, 255, 0);
+    border-radius: 4px;
+}
+
+#header_abonner:hover , #header_menu:hover{
+    filter:opacity(80%);
+}
+
+#header_menu{
+    padding: 5px;
+    background-color: rgb(225, 222, 222);
+    border-radius: 4px;
+}
