--- a/index.css
+++ b/index.css
@@ -48,4 +48,10 @@ h1 {
     padding: 5px;
     background-color: rgb(225, 222, 222);
     border-radius: 4px;
+    display: flex;
+}
+
+#image_menu {
+    height: 20px;
+    width: 15px;
 }
