--- a/index.css
+++ b/index.css
@@ -1,6 +1,7 @@
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
 @font-face {
@@ -20,6 +21,7 @@ h1 {
     font-family: chunk;
 }
 
+
 #background_foreach{
     padding: 5px;
     background-color: red;
@@ -27,7 +29,6 @@ h1 {
 #header_foreach {
     background-color: pink;
     padding: 10px;
-    max-width: 1480px;
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -35,6 +36,7 @@ h1 {
 
 #header_abonner {
     margin-left: 700px;
+    margin: auto;
     padding: 5px;
     background-color: rgb(255, 255, 0);
     border-radius: 4px;
@@ -54,4 +56,17 @@ h1 {
 #image_menu {
     height: 20px;
     width: 15px;
+}
+
+@media screen and (max-width:480px) {
+    #header_foreach {
+        background-color: blue;
+    }
+    .mobilenon , #header_abonner {
+        display: none;
+    }
+
+    
+
+    
 }
