--- a/index.css
+++ b/index.css
@@ -15,3 +15,19 @@ li {
 li:hover {
     background-color: rgb(177, 51, 51) ;  
 }
+
+@media screen and (max-width:480px) {
+    #navigateur_content {
+        background-color: rgb(232, 102, 102);
+    }
+    #navigateur_liste {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+    li {
+        padding: 5px;
+        display: flex;
+        justify-content: center;
+    }
+}
