--- a/index.css
+++ b/index.css
@@ -4,7 +4,7 @@ main {
     margin: auto;
 }
 
-#titreculture , #titre_science_et_vie{
+#titreculture , #titre_science_et_vie , #titre_sport{
     max-width: 1350px;
     margin: auto;
     background-color: red;
@@ -12,13 +12,13 @@ main {
     font-size: 20px;
 }
 
-.imageculture, .imagesv {
+.imageculture, .imagesv, .imagesport {
     width: 150px;
     height: 150px;
     padding: 10px;
 }
 
-#premiere_liste_culture, #deuxieme_liste_sv {
+#premiere_liste_culture, #deuxieme_liste_sv, #troisieme_liste_sport {
     background-color: rgb(222, 72, 125);
     padding:2px 0px;
 }
