--- a/index.css
+++ b/index.css
@@ -2,12 +2,14 @@
 main {
     max-width: 1350px;
     margin: auto;
+    background-color: red;
 }
+
 
 #titreculture , #titre_science_et_vie , #titre_sport{
     max-width: 1350px;
     margin: auto;
-    background-color: red;
+    background-color: rgb(0, 255, 255);
     font-weight:bolder;
     font-size: 20px;
 }
@@ -34,9 +36,47 @@ li{
     justify-content: center;
     align-items: center;
     background-color: green;
+    border-radius: 4px;
 }
 
-li:nth-child(2), li:nth-child(3){
-    margin: 0px 10px;
+li:nth-child(2){
+    margin-left: 5px;
+    margin-right: 5px;
 }
 
+li:nth-child(3) {
+    margin-right: 5px ;
+}
+
+@media screen and (max-width:480px) {
+    main {
+        padding: 20px 10px 10px 10px;
+    }
+    ul {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 0;
+    }
+
+    li:nth-child(1) {
+       margin-top:0 ;
+    }
+
+    li:nth-child(2){
+        margin-top: 10px;
+        margin-bottom: 10px;
+        margin-left: 0px;
+        margin-right: 0px;
+    }
+    
+    li:nth-child(3) {
+        margin-bottom: 10px;
+        margin-right: 0px ;
+    }
+
+    #premiere_liste_culture, #deuxieme_liste_sv, #troisieme_liste_sport {
+        margin: 10px;
+    }
+
+}
