--- a/index.css
+++ b/index.css
@@ -19,15 +19,15 @@ body{
 }
 h1 {
     font-family: chunk;
+    color: rgb(232, 102, 102);
 }
 
 
 #background_foreach{
     padding: 5px;
-    background-color: red;
+    background-color:rgb(232, 102, 102);
 }
 #header_foreach {
-    background-color: pink;
     padding: 10px;
     display: flex;
     justify-content: space-around;
@@ -60,7 +60,6 @@ h1 {
 
 @media screen and (max-width:480px) {
     #header_foreach {
-        background-color: blue;
     }
     .mobilenon , #header_abonner {
         display: none;
